feat: display version and values

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,6 +14,9 @@
     </head>
 
     <body>
+        <p><b>Version:</b> <%= version %></p>
+        <p><b>Values Source:</b> <%= source %> </p>
+        <p><b>Environment:</b> <%= env %> </p>
         <h1>My todolist</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
